--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@livekit/components-react": "^2.9.19",
+    "@livekit/components-styles": "^1.2.0",
+    "livekit-client": "^2.17.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
